--- a/css/custom.css
+++ b/css/custom.css
@@ -86,6 +86,18 @@ button {
 #copyright {
     background: #000000;
     padding: 2rem 3rem;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+}
+
+#banner {
+    background: url('https://source.unsplash.com/random/1920x1080?source%20code') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 /********** RWD **********/
